specs/blueprints/errors/validation/expected_list_got_field.eno
# Expecting a list but getting a field

-- input
field: value
-- input

-- javascript
eno.parse(input).list('field');
-- javascript

-- php
Eno\Parser::parse($input)->list('field');
-- php

-- python
enolib.parse(input).list('field')
-- python

-- ruby
Eno.parse(input).list('field')
-- ruby

## ValidationError

-- text
A list with the key 'field' was expected.
-- text

-- snippet
   Line | Content
 >    1 | field: value
-- snippet

selection: [0,0] => [0,12]


# Expecting a list but getting a field with continuations

-- input
field:
| continuation
| continuation
-- input

-- javascript
eno.parse(input).list('field');
-- javascript

-- php
Eno\Parser::parse($input)->list('field');
-- php

-- python
enolib.parse(input).list('field')
-- python

-- ruby
Eno.parse(input).list('field')
-- ruby

## ValidationError

-- text
A list with the key 'field' was expected.
-- text

-- snippet
   Line | Content
 >    1 | field:
 *    2 | | continuation
 *    3 | | continuation
-- snippet

selection: [0,0] => [2,14]

# Expecting a list but getting a field with continuations separated by idle lines

-- input
field: value
| continuation
| continuation

> comment
| continuation
-- input

-- javascript
eno.parse(input).list('field');
-- javascript

-- php
Eno\Parser::parse($input)->list('field');
-- php

-- python
enolib.parse(input).list('field')
-- python

-- ruby
Eno.parse(input).list('field')
-- ruby

## ValidationError

-- text
A list with the key 'field' was expected.
-- text

-- snippet
   Line | Content
 >    1 | field: value
 *    2 | | continuation
 *    3 | | continuation
 *    4 | 
 *    5 | > comment
 *    6 | | continuation
-- snippet

selection: [0,0] => [5,14]
